Final Deliverables/Final Code/Inventory Management System for Retailers Final Code/kubernetes/flask_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibm-project

spec:
  replicas: 5
  selector:
    matchLabels:
      app: ibm-project
  template:
    metadata:
      labels:
        app: ibm-project

    spec:
      containers:
        - name: flask-app-container
          image: flask-app-testing
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
              protocol: TCP
