Final Deliverables/Final Code/Inventory Management System for Retailers Final Code/kubernetes/flask_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ibm-project-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  # ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: ibm-project-service
                port:
                  number: 5000
            path: /
            pathType: Prefix





#apiVersion: apps/v1
#kind: Deployment
#metadata:
# name: my-nginx
# labels:
#   app: nginx
#spec:
# replicas: 3
# selector:
#   matchLabels:
#     app: nginx
# template:
#   metadata:
#     labels:
#       app: nginx
#   spec:
#     containers:
#     - name: nginx
#       image: nginx:1.7.9
#       ports:
#      - containerPort: 80
